--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="bps.android.reader.MainActivity"
+            android:name="bps.android.reader.BookShelfActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,10 @@
         <activity
             android:name="bps.android.reader.ShowBookDetailsActivity"
             android:label="BookDetailsActivity"
-            android:parentActivityName="bps.android.reader.MainActivity" >  
+            android:parentActivityName="bps.android.reader.BookShelfActivity" >  
+        </activity>
+        <activity
+            android:name="bps.android.reader.ShowArticle" >
         </activity>
     </application>
 
