--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,13 +5,15 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:screenOrientation="landscape"
+        android:configChanges="keyboardHidden|orientation"
         android:theme="@style/AppTheme" >
         <activity
             android:name="bps.android.reader.BookShelfActivity"
@@ -25,10 +27,9 @@
         <activity
             android:name="bps.android.reader.ShowBookDetailsActivity"
             android:label="BookDetailsActivity"
-            android:parentActivityName="bps.android.reader.BookShelfActivity" >  
+            android:parentActivityName="bps.android.reader.BookShelfActivity" >
         </activity>
-        <activity
-            android:name="bps.android.reader.ShowArticle" >
+        <activity android:name="bps.android.reader.ShowArticle" >
         </activity>
     </application>
 
