--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,10 @@
             android:parentActivityName="bps.android.reader.BookShelfActivity" >
         </activity>
         <activity android:name="bps.android.reader.ShowArticle" ></activity>
+        <activity android:name="bps.android.reader.ChangeListGridActivity" ></activity>
         <activity android:name="jp.bpsinc.android.viewer.epub.fxl.activity.FxlEpubViewerActivity" ></activity>
+        <activity android:name="jp.bpsinc.android.viewer.epub.omf.activity.OmfEpubViewerActivity" ></activity>
+        <activity android:name="bps.android.reader.SampleDialogShelfActivity" ></activity>
     </application>
 
 </manifest>
