--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,10 +10,10 @@
 
     <application
         android:allowBackup="true"
+        android:configChanges="keyboardHidden|orientation"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:screenOrientation="landscape"
-        android:configChanges="keyboardHidden|orientation"
         android:theme="@style/AppTheme" >
         <activity
             android:name="bps.android.reader.activity.BookShelfActivity"
@@ -29,11 +29,16 @@
             android:label="BookDetailsActivity"
             android:parentActivityName="bps.android.reader.activity.BookShelfActivity" >
         </activity>
-        <activity android:name="bps.android.reader.activity.ShowArticleActivity" ></activity>
-        <activity android:name="bps.android.reader.activity.ChangeListGridActivity" ></activity>
-        <activity android:name="jp.bpsinc.android.viewer.epub.fxl.activity.FxlEpubViewerActivity" ></activity>
-        <activity android:name="jp.bpsinc.android.viewer.epub.omf.activity.OmfEpubViewerActivity" ></activity>
-        <activity android:name="bps.android.reader.activity.SampleDialogShelfActivity" ></activity>
+        <activity android:name="bps.android.reader.activity.ShowArticleActivity" >
+        </activity>
+        <activity android:name="bps.android.reader.activity.ChangeListGridActivity" >
+        </activity>
+        <activity android:name="jp.bpsinc.android.viewer.epub.fxl.activity.FxlEpubViewerActivity" >
+        </activity>
+        <activity android:name="jp.bpsinc.android.viewer.epub.omf.activity.OmfEpubViewerActivity" >
+        </activity>
+        <activity android:name="bps.android.reader.activity.SampleDialogShelfActivity" >
+        </activity>
     </application>
 
 </manifest>
